<resources>
    <string name="app_name">NexCab</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="rides">Rides</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_settings">Settings\n</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instant_ride">Instant Ride</string>
    <string name="prebook">Pre-book</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination">Destination</string>
    <string name="number_of_passengers">Number of Passengers</string>
    <string name="enable_sharing">Enable Sharing</string>
    <string name="lets_go">Lets go!</string>
    <string name="map">Map for pickup and Destination locations</string>
    <string name="createAccount">Create your account</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="newusersignup">New user? Sign Up</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="signup">Sign up</string>
    <string name="passwordrepeat">Repeat Password</string>
    <string name="channel_name">Demo update</string>
    <string name="channel_description">Demo description</string>
    <string name="search">Search</string>
</resources>